--- a/src/app/views/entity/compliance-detail/compliance-detail.component.html
+++ b/src/app/views/entity/compliance-detail/compliance-detail.component.html
@@ -2,20 +2,26 @@
   <div class="wrapper-back">
     <div class="container nav-bg">
       <div id="detail-page-header">
-
-        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-2 toppad">
+          <img
+            src="../../../../images/back-btn.svg"
+            alt=""
+            (click)="goBack()"
+          />
+        </div>
         <div class="col-xs-7 text-center">
           <h1 class="t-agent">Compliances</h1>
         </div>
       </div>
     </div>
-    <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
+    <app-entity-name-header
+      [entityModel]="entityModel"
+    ></app-entity-name-header>
   </div>
   <div class="container app-bg5 bottom-wrapper-for-back">
     <div class="row marginTop20">
       <div class="col-xs-12 col-md-6 cell-bg">
         <div class="agent-detail">
-
           <div class="row">
             <div class="col-md-12 col-xs-12">
               <div class="topHeadingComp">
@@ -25,11 +31,10 @@
             </div>
           </div>
 
-
           <div class="row">
             <div class="col-md-12 col-xs-12">
               <div class="alertType_wp">
-                <h4 class="fontColor">{{complianceModel.reqdesc}}</h4>
+                <h4 class="fontColor">{{ complianceModel.reqdesc }}</h4>
               </div>
             </div>
           </div>
@@ -38,17 +43,35 @@
             <div class="col-md-6 col-xs-6">
               <div class="alertType_wp">
                 <h4 class="mb-5">Condition</h4>
-                <span><img src="../../../../images/ic_objective_complete-4.svg" alt=""
-                    style="width:14px;"> {{getReqMetText(complianceModel.reqMet)}}</span>
+                <span
+                  ><img
+                    src="../../../../images/ic_objective_complete-4.svg"
+                    alt=""
+                    style="width: 14px"
+                  />
+                  {{ getReqMetText(complianceModel.reqMet) }}</span
+                >
               </div>
             </div>
             <div class="col-md-6 col-xs-6">
               <div class="alertType_wp">
                 <h4 class="mb-5">Compliance Status</h4>
                 <span
-                  [ngClass]="{'greenIcon':complianceModel.comstat=='Green','yellowIcon':complianceModel.comstat=='Yellow','redIcon':complianceModel.comstat=='Red'}">&nbsp;</span>
+                  [ngClass]="{
+                    greenIcon: complianceModel.comstat === 'Green',
+                    yellowIcon: complianceModel.comstat === 'Yellow',
+                    redIcon: complianceModel.comstat === 'Red'
+                  }"
+                  >&nbsp;</span
+                >
                 <span
-                  [ngClass]="{'colorGreen':complianceModel.comstat=='Green','colorYellow':complianceModel.comstat=='Yellow','colorRed':complianceModel.comstat=='Red'}">{{complianceModel.comstat}}</span>
+                  [ngClass]="{
+                    colorGreen: complianceModel.comstat === 'Green',
+                    colorYellow: complianceModel.comstat === 'Yellow',
+                    colorRed: complianceModel.comstat === 'Red'
+                  }"
+                  >{{ complianceModel.comstat }}</span
+                >
               </div>
             </div>
           </div>
@@ -59,7 +82,6 @@
 
       <div class="col-xs-12 col-md-6 cell-bg">
         <div class="agent-detail">
-
           <div class="row">
             <div class="col-md-12 col-xs-12">
               <div class="topHeadingComp">
@@ -72,7 +94,7 @@
           <div class="row">
             <div class="col-md-12 col-xs-12">
               <div class="alertType_wp">
-                <h4 class="fontColor">{{complianceModel.qualification}}</h4>
+                <h4 class="fontColor">{{ complianceModel.qualification }}</h4>
               </div>
             </div>
           </div>
@@ -81,13 +103,17 @@
             <div class="col-md-6 col-xs-6">
               <div class="alertType_wp">
                 <h4 class="mb-5">Associated to</h4>
-                <span>{{complianceModel.appliesTo == 'Agent'?'':complianceModel.entityname}}</span>
+                <span>{{
+                  complianceModel.appliesTo === "Agent"
+                    ? ""
+                    : complianceModel.entityname
+                }}</span>
               </div>
             </div>
             <div class="col-md-6 col-xs-6">
               <div class="alertType_wp">
                 <h4 class="mb-5">Status</h4>
-                <span>{{complianceModel.qualStatDesc}}</span>
+                <span>{{ complianceModel.qualStatDesc }}</span>
               </div>
             </div>
           </div>
@@ -95,13 +121,13 @@
             <div class="col-md-6 col-xs-6">
               <div class="alertType_wp">
                 <h4 class="mb-5">Effective Date</h4>
-                <span>{{complianceModel.effectiveDate | slice:0:10}}</span>
+                <span>{{ complianceModel.effectiveDate | slice: 0:10 }}</span>
               </div>
             </div>
             <div class="col-md-6 col-xs-6">
               <div class="alertType_wp">
                 <h4 class="mb-5">Expiration Date</h4>
-                <span>{{complianceModel.expirationDate | slice:0:10}}</span>
+                <span>{{ complianceModel.expirationDate | slice: 0:10 }}</span>
               </div>
             </div>
           </div>
@@ -114,9 +140,13 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12 noPadding">
-        <div class="buttonFooter_wp"><button type="button" class="btn btn-primary footerBtn"
-            (click)="onNocEmailClick()">
-            <img src="../../../../images/mail-icon-3.svg" alt=""> Email NOC
+        <div class="buttonFooter_wp">
+          <button
+            type="button"
+            class="btn btn-primary footerBtn"
+            (click)="onNocEmailClick()"
+          >
+            <img src="../../../../images/mail-icon-3.svg" alt="" /> Email NOC
           </button>
         </div>
       </div>
