--- a/src/app/customUI/dialogs/add-objective-popup/add-objective-popup.component.html
+++ b/src/app/customUI/dialogs/add-objective-popup/add-objective-popup.component.html
@@ -1,9 +1,15 @@
-
 <mat-dialog-content class="mat-dialog-content">
   <!-- Modal content-->
 
   <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" (click) = "onCancelClick()">&times;</button>
+    <button
+      type="button"
+      class="close"
+      data-dismiss="modal"
+      (click)="onCancelClick()"
+    >
+      &times;
+    </button>
     <h4 class="modal-title">Add Objective</h4>
   </div>
   <form role="form" #registerForm="ngForm" id="myForm">
@@ -12,33 +18,73 @@
 
       <div class="form-group">
         <label for="usr">Objective Details</label>
-         <input type="text" class="form-control" id="name" [(ngModel)]="description" placeholder="Write your Objective"
-          [ngModelOptions]="{standalone: true}" #name="ngModel" required (keydown)="keyDownHandler($event)"> 
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          [(ngModel)]="description"
+          placeholder="Write your Objective"
+          [ngModelOptions]="{ standalone: true }"
+          #name="ngModel"
+          required
+          (keydown)="keyDownHandler($event)"
+        />
       </div>
-      <span class="text-danger"
-      *ngIf="(name.touched || registerForm.submitted) && name.errors?.required">
-      <p style="color: red;">Name is required</p>
-  </span>
+      <span
+        class="text-danger"
+        *ngIf="
+          (name.touched || registerForm.submitted) && name.errors?.required
+        "
+      >
+        <p style="color: red">Name is required</p>
+      </span>
       <div class="form-group calenderPosition">
         <label for="usr">Due Date of Objective</label>
-        <br>
-         <!-- <button type="submit" class="btn btn-default add-btn"><img src="images/calendar-icon.svg" alt=""></button> -->
-        <mat-form-field >
-          <input matInput [matDatepicker] = "picker" placeholder = "Choose a date" name="dueDate" [(ngModel)]="dueDate" [min]="minDate"  readonly required  #date="ngModel">
-          <mat-datepicker-toggle matSuffix [for] = "picker" required></mat-datepicker-toggle>
-          <mat-datepicker #picker ></mat-datepicker>
-       </mat-form-field>
-       <span class="text-danger"
-       *ngIf="(date.touched || registerForm.submitted) && date.errors?.required">
-       <p style="color: red;">Due Date is required</p>
-   </span>
-        </div>
+        <br />
+        <!-- <button type="submit" class="btn btn-default add-btn"><img src="images/calendar-icon.svg" alt=""></button> -->
+        <mat-form-field>
+          <input
+            matInput
+            [matDatepicker]="picker"
+            placeholder="Choose a date"
+            name="dueDate"
+            [(ngModel)]="dueDate"
+            [min]="minDate"
+            readonly
+            required
+            #date="ngModel"
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="picker"
+            required
+          ></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <span
+          class="text-danger"
+          *ngIf="
+            (date.touched || registerForm.submitted) && date.errors?.required
+          "
+        >
+          <p style="color: red">Due Date is required</p>
+        </span>
+      </div>
       <div class="clear paddingTop10"></div>
     </div>
   </form>
 </mat-dialog-content>
-<mat-dialog-actions id="MarkAsReviewedDialogButtonGroup" align="end" >
-  <button (click)="onCancelClick()"   >Cancel</button>
-  <button  type="submit" (click)="onSaveChangesClick()" [ngClass] = "{'saveButton' : (description == undefined ||description == ''  || dueDate ==undefined)}">Save Changes</button>
+<mat-dialog-actions id="MarkAsReviewedDialogButtonGroup" align="end">
+  <button (click)="onCancelClick()">Cancel</button>
+  <button
+    type="submit"
+    (click)="onSaveChangesClick()"
+    [ngClass]="{
+      saveButton:
+        description === undefined || description === '' || dueDate === undefined
+    }"
+  >
+    Save Changes
+  </button>
 </mat-dialog-actions>
 <!-- Edit Objective Modal End here -->
