--- a/src/app/customUI/dialogs/recent-profiles/recent-profiles.component.html
+++ b/src/app/customUI/dialogs/recent-profiles/recent-profiles.component.html
@@ -1,19 +1,30 @@
-<div class="modal fade" id="recentAssociatesl" role="dialog"
->
+<div class="modal fade" id="recentAssociatesl" role="dialog">
   <div class="modal-dialog">
-
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" #closeRecentProfileModal><img src="../../../../images/ic_menu_close.svg" alt=""></button>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          #closeRecentProfileModal
+        >
+          <img src="../../../../images/ic_menu_close.svg" alt="" />
+        </button>
         <h4 class="modal-title">Recent</h4>
       </div>
       <form role="form">
         <div class="modal-body">
           <ul class="recent">
-            <li [ngClass]="{'recent1':item.type=='A','recent2':item.type=='P'}"
-              *ngFor="let item of recentProfileArray" (click)="onProfileClick(item)">
-              <a>{{item.name}}</a>
+            <li
+              [ngClass]="{
+                recent1: item.type === 'A',
+                recent2: item.type === 'P'
+              }"
+              *ngFor="let item of recentProfileArray"
+              (click)="onProfileClick(item)"
+            >
+              <a>{{ item.name }}</a>
             </li>
           </ul>
         </div>
@@ -23,6 +34,5 @@
       </div> -->
       </form>
     </div>
-
   </div>
 </div>
