--- a/src/app/customUI/dialogs/update-note/update-note.component.html
+++ b/src/app/customUI/dialogs/update-note/update-note.component.html
@@ -1,47 +1,65 @@
 <div class="modal fade" id="updateNewNotes" role="dialog">
-  <div class="modal-dialog" style="margin-top:20%;">
-
+  <div class="modal-dialog" style="margin-top: 20%">
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" #closeUpdateNote>&times;</button>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          #closeUpdateNote
+        >
+          &times;
+        </button>
         <h4 class="modal-title">Update Note</h4>
       </div>
       <form role="form">
         <div class="modal-body">
-          <div class="clear paddingTop15">
-          </div>
-          <span *ngIf = "entityInfo.type !='P'">
+          <div class="clear paddingTop15"></div>
+          <span *ngIf="entityInfo.type !== 'P'">
             <label for="cars">Category:</label>
-            <div class="clear paddingTop15">
-            </div>
-            <input type="text" class="form-control"  [(ngModel)]="notesCategory"
-            [ngModelOptions]="{standalone: true}" readonly> 
+            <div class="clear paddingTop15"></div>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="notesCategory"
+              [ngModelOptions]="{ standalone: true }"
+              readonly
+            />
           </span>
-          <div *ngIf = "entityInfo.type !='P'" class="clear paddingTop15">
-          </div>
+          <div *ngIf="entityInfo.type !== 'P'" class="clear paddingTop15"></div>
 
-          <span *ngIf = "entityInfo.type !='P'">
+          <span *ngIf="entityInfo.type !== 'P'">
             <label for="cars">Summary:</label>
-            <div class="clear paddingTop15">
-            </div>
+            <div class="clear paddingTop15"></div>
             <div class="form-group">
-            <input type="text" class="form-control" placeholder="Write the Summary" [(ngModel)]="summary"
-            [ngModelOptions]="{standalone: true}" readonly> 
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Write the Summary"
+                [(ngModel)]="summary"
+                [ngModelOptions]="{ standalone: true }"
+                readonly
+              />
             </div>
-            </span>
-          <div *ngIf = "entityInfo.type !='P'" class="clear paddingTop15">
-          </div>
+          </span>
+          <div *ngIf="entityInfo.type !== 'P'" class="clear paddingTop15"></div>
           <label for="cars">Notes:</label>
-          <div class="clear paddingTop15">
-          </div>
+          <div class="clear paddingTop15"></div>
           <div class="form-group">
-            <input type="text" class="form-control" id="name" placeholder="Write your note here..."
-              [(ngModel)]="note" [ngModelOptions]="{standalone: true}" rows="6" cols="50"
-              style="resize: none;">
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              placeholder="Write your note here..."
+              [(ngModel)]="note"
+              [ngModelOptions]="{ standalone: true }"
+              rows="6"
+              cols="50"
+              style="resize: none"
+            />
           </div>
           <div class="clear paddingTop15"></div>
-
         </div>
         <div class="modal-footer">
           <a data-dismiss="modal" alt="Cancel"><span>Cancel</span></a>
@@ -49,6 +67,5 @@
         </div>
       </form>
     </div>
-
   </div>
 </div>
