--- a/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
+++ b/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
@@ -2,15 +2,30 @@
   <div class="wrapper-back">
     <div class="nav-bg container">
       <div id="detail-page-header">
-        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-2 toppad">
+          <img
+            src="../../../../images/back-btn.svg"
+            alt=""
+            (click)="goBack()"
+          />
+        </div>
         <div class="col-xs-8 text-center">
           <h1 class="t-agent">13 Month Activity</h1>
         </div>
-        <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
-            data-target="#recentAssociatesl"><img src="../../../../images/baseline-history.svg" alt=""></a></div>
+        <div class="col-xs-2 text-right toppad">
+          <a
+            (click)="onRecentProfileClick()"
+            alt=""
+            data-toggle="modal"
+            data-target="#recentAssociatesl"
+            ><img src="../../../../images/baseline-history.svg" alt=""
+          /></a>
+        </div>
       </div>
     </div>
-    <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
+    <app-entity-name-header
+      [entityModel]="entityModel"
+    ></app-entity-name-header>
   </div>
   <div class="container bottom-wrapper-for-back">
     <div class="row">
@@ -19,18 +34,33 @@
       <div class="col-xs-1"></div>
     </div>
   </div>
-  <div class="container app-bg2  " style="padding-top:10px;">
+  <div class="container app-bg2" style="padding-top: 10px">
     <div class="row">
-
       <div style="display: block">
-        <canvas baseChart class="barHeight" [datasets]="nprChartData" [colors]="chartColors" [labels]="barChartLabels" [options]="barChartOptions"
-          [legend]="barChartLegend" [chartType]="barChartType">
+        <canvas
+          baseChart
+          class="barHeight"
+          [datasets]="nprChartData"
+          [colors]="chartColors"
+          [labels]="barChartLabels"
+          [options]="barChartOptions"
+          [legend]="barChartLegend"
+          [chartType]="barChartType"
+        >
         </canvas>
       </div>
 
       <div style="display: block">
-        <canvas baseChart class="barHeight" [datasets]="cplChartData" [colors]="chartColors" [labels]="barChartLabels" [options]="barChartOptions"
-          [legend]="barChartLegend" [chartType]="barChartType">
+        <canvas
+          baseChart
+          class="barHeight"
+          [datasets]="cplChartData"
+          [colors]="chartColors"
+          [labels]="barChartLabels"
+          [options]="barChartOptions"
+          [legend]="barChartLegend"
+          [chartType]="barChartType"
+        >
         </canvas>
       </div>
 
@@ -39,8 +69,8 @@
           <li *ngFor="let item of thirteenMonthsModels">
             <div class="row">
               <div class="col-xs-12 col-md-12 calendar-head">
-                <img src="images/baseline-calendar_today-24px.svg" alt=""> <span> {{getMonth(item)}} -
-                  {{item.year}}</span>
+                <img src="images/baseline-calendar_today-24px.svg" alt="" />
+                <span> {{ getMonth(item) }} - {{ item.year }}</span>
               </div>
             </div>
             <div class="row">
@@ -49,41 +79,69 @@
                   <div class="clearfix"></div>
                   <div class="row">
                     <div class="col-md-6 col-xs-6">
-                      <div class="amount">NPR Plan Current Month<br><span>{{item.nprPlanned |
-                          currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
-                    </div>
-                    <div class="col-md-6 col-xs-6">
-                      <div class="amount">NPR
-                        Actual<br><span>{{item.nprActual | currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
-                    </div>
-                  </div>
-                  <div class="clear paddingTop10"></div>
-                  <div class="row">
-                    <div class="col-md-6 col-xs-6">
-                      <div class="amount">NPR % of Plan<br><span
-                          currencyMask>{{item.nprPercent==''?'0':item.nprPercent|number:'1.1-1'}}%</span>
+                      <div class="amount">
+                        NPR Plan Current Month<br /><span>{{
+                          item.nprPlanned
+                            | currency: "USD":"symbol-narrow":"1.0-0"
+                        }}</span>
                       </div>
                     </div>
                     <div class="col-md-6 col-xs-6">
-                      <div class="amount">CPL
-                        Actual<br><span>{{item.cplActual| currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+                      <div class="amount">
+                        NPR Actual<br /><span>{{
+                          item.nprActual
+                            | currency: "USD":"symbol-narrow":"1.0-0"
+                        }}</span>
+                      </div>
                     </div>
                   </div>
                   <div class="clear paddingTop10"></div>
                   <div class="row">
                     <div class="col-md-6 col-xs-6">
-                      <div class="amount">CPL
-                        Plan<br><span>{{item.cplPlanned| currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+                      <div class="amount">
+                        NPR % of Plan<br /><span currencyMask
+                          >{{
+                            item.nprPercent === ""
+                              ? "0"
+                              : (item.nprPercent | number: "1.1-1")
+                          }}%</span
+                        >
+                      </div>
                     </div>
                     <div class="col-md-6 col-xs-6">
-                      <div class="amount">CPL % of
-                        Plan<br><span>{{item.cplPercent==''?'0':item.cplPercent|number:'1.1-1'}}%</span></div>
+                      <div class="amount">
+                        CPL Actual<br /><span>{{
+                          item.cplActual
+                            | currency: "USD":"symbol-narrow":"1.0-0"
+                        }}</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="clear paddingTop10"></div>
+                  <div class="row">
+                    <div class="col-md-6 col-xs-6">
+                      <div class="amount">
+                        CPL Plan<br /><span>{{
+                          item.cplPlanned
+                            | currency: "USD":"symbol-narrow":"1.0-0"
+                        }}</span>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-xs-6">
+                      <div class="amount">
+                        CPL % of Plan<br /><span
+                          >{{
+                            item.cplPercent === ""
+                              ? "0"
+                              : (item.cplPercent | number: "1.1-1")
+                          }}%</span
+                        >
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
           </li>
         </ul>
         <!-- <div class="row">
