--- a/src/app/views/dashboard/favorites/favorites.component.html
+++ b/src/app/views/dashboard/favorites/favorites.component.html
@@ -1,24 +1,35 @@
 <div class="container app-bg2">
   <div class="row" *ngIf="hideNoDataDiv">
     <ul>
-      <li *ngFor="let item of favorites;let i = index;">
-        <div class="col-xs-12 col-md-6 cell-bg" *ngIf="item.favorite=='yes'">
+      <li *ngFor="let item of favorites; let i = index">
+        <div class="col-xs-12 col-md-6 cell-bg" *ngIf="item.favorite === 'yes'">
           <div class="agent-detail">
             <div class="dp">
               <img
-                src="{{item.type=='A'?'../../../../images/baseline-business-24px.svg':'../../../../images/ic_note_profile.svg'}}"
-                alt="" />
-              <div class="dpProfile_wp proActiBg">{{getTypeAnnotation(item)}}</div>
+                src="{{
+                  item.type === 'A'
+                    ? '../../../../images/baseline-business-24px.svg'
+                    : '../../../../images/ic_note_profile.svg'
+                }}"
+                alt=""
+              />
+              <div class="dpProfile_wp proActiBg">
+                {{ getTypeAnnotation(item) }}
+              </div>
             </div>
 
-            <h4 class="topAgentsName"><a (click)="onItemClick(item)">{{item.name}}</a><span (click)="onItemClick(item)">
-                ({{item.entityId}})</span>
+            <h4 class="topAgentsName">
+              <a (click)="onItemClick(item)">{{ item.name }}</a
+              ><span (click)="onItemClick(item)"> ({{ item.entityId }})</span>
               <div class="clearfix paddingTop10"></div>
-              <span>{{getAddress(item)}}</span>
+              <span>{{ getAddress(item) }}</span>
             </h4>
-            <a class="favouritIconPosition"><img src="../../../../images/favourite-icon.svg" alt=""
-                (click)="onStarClick(item,i)"></a>
-
+            <a class="favouritIconPosition"
+              ><img
+                src="../../../../images/favourite-icon.svg"
+                alt=""
+                (click)="onStarClick(item, i)"
+            /></a>
           </div>
         </div>
       </li>
@@ -27,13 +38,17 @@
     <div class="row marginBottom20" *ngIf="moreDataAvailable">
       <div class="col-xs-12 col-md-12 loadMoreWp">
         <hr />
-        <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
+        <div class="loadMore">
+          <a (click)="onLoadMoreClick()" alt="Load More">Load More</a>
+        </div>
       </div>
     </div>
   </div>
-  <div class="serach-emp " *ngIf="!hideNoDataDiv">
+  <div class="serach-emp" *ngIf="!hideNoDataDiv">
     <h2><em>It is Empty Here!</em></h2>
-    <p><em>{{errorMsg}}</em></p>
+    <p>
+      <em>{{ errorMsg }}</em>
+    </p>
   </div>
   <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
   <!-- <button (click)="topFunction()" id="myBtn" title="Go to top"><span
