--- a/src/app/views/entity/compliance/compliance.component.html
+++ b/src/app/views/entity/compliance/compliance.component.html
@@ -2,44 +2,74 @@
   <div class="wrapper-back">
     <div class="container nav-bg">
       <div id="detail-page-header">
-
-        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-2 toppad">
+          <img
+            src="../../../../images/back-btn.svg"
+            alt=""
+            (click)="goBack()"
+          />
+        </div>
         <div class="col-xs-7 text-center">
           <h1 class="t-agent">Compliances</h1>
         </div>
       </div>
     </div>
-    <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
-
+    <app-entity-name-header
+      [entityModel]="entityModel"
+    ></app-entity-name-header>
   </div>
 
   <div class="container app-bg5 bottom-wrapper-for-back" *ngIf="hideNoDataDiv">
     <div class="row marginTop20">
       <ul>
-        <li *ngFor="let item of complianceModels" (click)="onComplianceClick(item)">
+        <li
+          *ngFor="let item of complianceModels"
+          (click)="onComplianceClick(item)"
+        >
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="agent-detail openAlert">
-              <h4>{{item.reqdesc}}<span><img
-                    src="{{item.reqMet == 'yes'?'../../../../images/ic_objective_complete-2.svg':'../../../../images/ic_objective_complete.svg'}}"
-                    alt=""></span></h4>
+              <h4>
+                {{ item.reqdesc
+                }}<span
+                  ><img
+                    src="{{
+                      item.reqMet === 'yes'
+                        ? '../../../../images/ic_objective_complete-2.svg'
+                        : '../../../../images/ic_objective_complete.svg'
+                    }}"
+                    alt=""
+                /></span>
+              </h4>
               <div class="clear"></div>
               <div class="paddingTop10"></div>
-              <div class="statusInd_wp"
-                [ngClass]="{'bgGreen':item.comstat =='Green','bgYellow':item.comstat=='Yellow','bgRed':item.comstat=='Red'}">
-                {{item.comstat | slice:0:1}}</div>
-              <span>{{item.qualification?item.qualification:'Unknown'}}</span>
-              <span class="expDate">{{getComplianceDate(item) | slice:0:28}}</span>
+              <div
+                class="statusInd_wp"
+                [ngClass]="{
+                  bgGreen: item.comstat === 'Green',
+                  bgYellow: item.comstat === 'Yellow',
+                  bgRed: item.comstat === 'Red'
+                }"
+              >
+                {{ item.comstat | slice: 0:1 }}
+              </div>
+              <span>{{
+                item.qualification ? item.qualification : "Unknown"
+              }}</span>
+              <span class="expDate">{{
+                getComplianceDate(item) | slice: 0:28
+              }}</span>
               <div class="clear"></div>
               <div class="paddingTop10"></div>
             </div>
           </div>
-
         </li>
       </ul>
     </div>
   </div>
-  <div class="serach-emp " *ngIf="!hideNoDataDiv" style="margin-top:100px">
+  <div class="serach-emp" *ngIf="!hideNoDataDiv" style="margin-top: 100px">
     <h2><em>It is Empty Here!</em></h2>
-    <p><em>{{errorMsg}}</em></p>
+    <p>
+      <em>{{ errorMsg }}</em>
+    </p>
   </div>
 </div>
