--- a/src/app/views/entity/entity-alert/entity-alert.component.html
+++ b/src/app/views/entity/entity-alert/entity-alert.component.html
@@ -2,13 +2,21 @@
   <div class="wrapper-back">
     <div class="container nav-bg">
       <div id="detail-page-header">
-        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-2 toppad">
+          <img
+            src="../../../../images/back-btn.svg"
+            alt=""
+            (click)="goBack()"
+          />
+        </div>
         <div class="col-xs-8 text-center">
           <h1 class="t-agent">Open Alerts</h1>
         </div>
       </div>
     </div>
-    <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
+    <app-entity-name-header
+      [entityModel]="entityModel"
+    ></app-entity-name-header>
   </div>
   <div class="container app-bg2 bottom-wrapper-for-back" *ngIf="hideNoDataDiv">
     <div class="row marginTop20">
@@ -16,11 +24,17 @@
         <li *ngFor="let item of openAlertModels" (click)="onAlertClick(item)">
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="agent-detail openAlert">
-              <div class="statusInd_wp bgRed"
-                [ngClass]="{'bgRed':item.severitydesc=='Red','bgYellow':item.severitydesc!='Red'}">
-                {{item.severitydesc | slice:0:1}}</div>
-              <h4>{{item.alertType}}</h4>
-              <span>{{item.description}}</span>
+              <div
+                class="statusInd_wp bgRed"
+                [ngClass]="{
+                  bgRed: item.severitydesc === 'Red',
+                  bgYellow: item.severitydesc !== 'Red'
+                }"
+              >
+                {{ item.severitydesc | slice: 0:1 }}
+              </div>
+              <h4>{{ item.alertType }}</h4>
+              <span>{{ item.description }}</span>
             </div>
           </div>
         </li>
@@ -28,14 +42,18 @@
       <div class="row marginBottom20" *ngIf="moreDataAvailable">
         <div class="col-xs-12 col-md-12 loadMoreWp">
           <hr />
-          <div class="loadMore"><a alt="Load More" (click)="onLoadMoreClick()">Load More</a></div>
+          <div class="loadMore">
+            <a alt="Load More" (click)="onLoadMoreClick()">Load More</a>
+          </div>
         </div>
       </div>
       <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
     </div>
   </div>
-  <div class="serach-emp " *ngIf="!hideNoDataDiv" style="margin-top:100px">
+  <div class="serach-emp" *ngIf="!hideNoDataDiv" style="margin-top: 100px">
     <h2><em>It is Empty Here!</em></h2>
-    <p><em>{{errorMsg}}</em></p>
+    <p>
+      <em>{{ errorMsg }}</em>
+    </p>
   </div>
 </div>
