--- a/src/app/views/rearrange-items-layouts/person-detail-items-rearrange/person-detail-items-rearrange.component.html
+++ b/src/app/views/rearrange-items-layouts/person-detail-items-rearrange/person-detail-items-rearrange.component.html
@@ -1,25 +1,51 @@
 <div class="container-fluid nospace">
   <div class="container nav-bg">
     <div class="row">
-      <div class="col-xs-1 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+      <div class="col-xs-1 toppad">
+        <img src="../../../../images/back-btn.svg" alt="" (click)="goBack()" />
+      </div>
       <div class="col-xs-9 text-center">
         <h1 class="t-agent noWrap">Person Module Layout</h1>
       </div>
-      <div class="col-xs-1  tpad" [ngClass]="{saveButton : disableSave == true}"><a class="opacity"
-          (click)="Save()"><img src="../../../../images/save-icon.svg" alt=""
-            [ngStyle]="disableSave == true?{'background-color': 'lightslategray'} : {'background-color': 'unset'}"><br><span
+      <div
+        class="col-xs-1 tpad"
+        [ngClass]="{ saveButton: disableSave === true }"
+      >
+        <a class="opacity" (click)="Save()"
+          ><img
+            src="../../../../images/save-icon.svg"
+            alt=""
+            [ngStyle]="
+              disableSave === true
+                ? { 'background-color': 'lightslategray' }
+                : { 'background-color': 'unset' }
+            "
+          /><br /><span
             class="edit-detail"
-            [ngStyle]="disableSave == true?{'background-color': 'lightslategray'} : {'background-color': 'unset'}">Save</span></a>
+            [ngStyle]="
+              disableSave === true
+                ? { 'background-color': 'lightslategray' }
+                : { 'background-color': 'unset' }
+            "
+            >Save</span
+          ></a
+        >
       </div>
     </div>
   </div>
   <div class="container app-bg4">
     <div class="row">
-      <ul class="example-list" cdkDropList (cdkDropListDropped)="onSort($event,false)">
+      <ul
+        class="example-list"
+        cdkDropList
+        (cdkDropListDropped)="onSort($event, false)"
+      >
         <li class="example-box" *ngFor="let item of personDetailItems" cdkDrag>
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="modules-layout">
-              <a alt=""><img src="{{item.img}}" alt=""> &nbsp; {{item.title}}</a>
+              <a alt=""
+                ><img src="{{ item.img }}" alt="" /> &nbsp; {{ item.title }}</a
+              >
             </div>
           </div>
         </li>
